--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "dotenv": "^16.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0"
   }
 }
