--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "load_area": "ts-node src/helpers/area_loader.ts"
+    "load_data": "ts-node src/helpers/data_loader.ts"
   },
   "author": "",
   "license": "ISC",
