--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^2.1.0"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
