--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@changey/react-leaflet-markercluster": "4.0.0-rc1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
